# artifacts/api-server/src/routes/auth.ts
@@ -233,6 +233,8 @@ router.get('/callback', async (req: Request, res: Response) => {
       firstName: dbUser.firstName,
       lastName: dbUser.lastName,
       profileImageUrl: dbUser.profileImageUrl,
+      isAdmin: dbUser.isAdmin,
+      teamName: dbUser.teamName,
     },
     access_token: tokens.access_token,
     refresh_token: tokens.refresh_token,
@@ -305,6 +307,8 @@ router.post(
           firstName: dbUser.firstName,
           lastName: dbUser.lastName,
           profileImageUrl: dbUser.profileImageUrl,
+          isAdmin: dbUser.isAdmin,
+          teamName: dbUser.teamName,
         },
         access_token: tokens.access_token,
         refresh_token: tokens.refresh_token,
